<resources>
    <string name="app_name">ArendVanDormalen-pset4</string>
    <string name="title_home">To-Do List:</string>
    <string name="instructions_home">Long-press an item to remove it</string>
    <string name="add_button">add</string>
    <string name="add_hint">type new task here</string>
    <string name="edit_task_text">Edit task</string>
    <string name="instructions_editing">Press an item to edit it, press enter to save it</string>
    <string name="add_list_button">Add List</string>
    <string name="enter_new_list_hint">Enter new list name here</string>
    <string name="title_master">Your Lists</string>
    <string name="instructions_add_master">Add a new list on the bottom</string>
    <string name="delete_list_master">Long-press a list to remove it</string>
</resources>
